Overflow fix

--- a/src/app/components/chatbot-profile/chatbot-profile.component.scss
+++ b/src/app/components/chatbot-profile/chatbot-profile.component.scss
@@ -4,6 +4,7 @@
   height: 20vh;
   box-shadow: 0 0 6px rgba(128, 128, 128, 0.2);
   border-radius: 8px;
+  overflow-y: auto;
 }
 
 .font-16px {
